# ios-webkit-debug-proxy

./: .gitignore  .travis.yml  BUILD.md  BUILD_FOR_MAC.md  LICENSE.md  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac  design.md
deb-files/: libimobiledevice-dev_1.2.0+dfsg-1trusty8_amd64.deb
debian/: changelog  control  copyright  rules
examples/: Makefile.am  README.md  dl_client.c  wdp_client.html  wdp_client.js  wi_client.c  wi_script.c  ws_client.html  ws_echo1.c  ws_echo2.c  ws_echo_common.c  ws_echo_common.h
include/: Makefile.am  asprintf.h  base64.h  char_buffer.h  device_listener.h  getline.h  hash_table.h  ios_webkit_debug_proxy.h  rpc.h  socket_manager.h  stpcpy.h  stpncpy.h  strcasestr.h  strndup.h  validate_utf8.h  webinspector.h  websocket.h
include/ios-webkit-debug-proxy/: device_listener.h  hash_table.h  idevice_ext.h  ios_webkit_debug_proxy.h  port_config.h  rpc.h  socket_manager.h  webinspector.h  websocket.h
include/iwdp/: char_buffer.h  ios_webkit_debug_proxy.h  port_config.h  socket_manager.h  webinspector.h
msvc/: .gitignore  CreateNuGetPackage.ps1  config.h  ios-webkit-debug-proxy.autoconfig  ios-webkit-debug-proxy.sln  ios-webkit-debug-proxy.vcxproj  packages.config
pipelines/: mac-ios_debug_proxy.yml  win-ios_debug_proxy.yml
pipelines/MSYS_install/: install.ps1
src/: Makefile.am  base64.c  char_buffer.c  device_listener.c  hash_table.c  idevice_ext.c  ios_webkit_debug_proxy.c  ios_webkit_debug_proxy_main.c  port_config.c  rpc.c  rpc.h  sha1.c  sha1.h  socket_manager.c  webinspector.c  websocket.c
