# Google BSD license http://code.google.com/google_bsd_license.html
# Copyright 2012 Google Inc. wrightt@google.com

EXTRA_DIST = asprintf.h getline.h stpcpy.h stpncpy.h strcasestr.h strndup.h 

nobase_include_HEADERS = \
    iwdp/base64.h \
    iwdp/char_buffer.h \
    iwdp/device_listener.h \
    iwdp/hash_table.h \
    iwdp/ios_webkit_debug_proxy.h \
    iwdp/port_config.h \
    iwdp/rpc.h \
    iwdp/sha1.h \
    iwdp/socket_manager.h \
    iwdp/validate_utf8.h \
    iwdp/webinspector.h \
    iwdp/websocket.h
