# Google BSD license https://developers.google.com/google-bsd-license
# Copyright 2012 Google Inc. wrightt@google.com

nobase_include_HEADERS = \
    ios-webkit-debug-proxy/base64.h \
    ios-webkit-debug-proxy/char_buffer.h \
    ios-webkit-debug-proxy/device_listener.h \
    ios-webkit-debug-proxy/hash_table.h \
    ios-webkit-debug-proxy/ios_webkit_debug_proxy.h \
    ios-webkit-debug-proxy/port_config.h \
    ios-webkit-debug-proxy/rpc.h \
    ios-webkit-debug-proxy/sha1.h \
    ios-webkit-debug-proxy/socket_manager.h \
    ios-webkit-debug-proxy/validate_utf8.h \
    ios-webkit-debug-proxy/webinspector.h \
    ios-webkit-debug-proxy/websocket.h
