# Google BSD license https://developers.google.com/google-bsd-license
# Copyright 2012 Google Inc. wrightt@google.com

nobase_include_HEADERS = \
    ios-webkit-debug-proxy/device_listener.h \
    ios-webkit-debug-proxy/ios_webkit_debug_proxy.h \
    ios-webkit-debug-proxy/socket_manager.h \
    ios-webkit-debug-proxy/webinspector.h \
    ios-webkit-debug-proxy/websocket.h
